--- a/Home.html
+++ b/Home.html
@@ -52,7 +52,7 @@
                 </div>
             </div>
             <div class="containertext">
-                <img class="imageprod" src="asir.jpg">
+                <img class="imageprod" src="dj.jpg">
                 <div class="inside">
                     <div class="price">3.000€</div>
                     <div class="textprod">Solicitar</div>
@@ -64,21 +64,17 @@
         <div class="nuevos">
             <div class="titNuevos">Nuevos Cursos</div>
             <div class="containertext">
-                <video width="80%" height="250" controls poster="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c5/Big_buck_bunny_poster_big.jpg/424px-Big_buck_bunny_poster_big.jpg">
+                <video width="80%" height="250" controls poster="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c5/Big_buck_bunny_poster_big.jpg/424px-Big_buck_bunny_poster_big.jpg" preload="metadata">
                     <source src="https://www.w3schools.com/tags/movie.mp4" type="video/mp4">
                     El navegador no puede interpretar el video
                 </video>
             </div>
             <div class="containertext">
                 <img class="imageprod2" src="cocina.jpg">
-                <div class="inside">
-                    <div class="price">3.000€</div>
-                    <div class="textprod">Solicitar</div>
-                </div>
             </div>
             </div>
             <div class="containertext">
-                <video width="80%" height="250" controls poster="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c5/Big_buck_bunny_poster_big.jpg/424px-Big_buck_bunny_poster_big.jpg">
+                <video width="80%" height="250" controls poster="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c5/Big_buck_bunny_poster_big.jpg/424px-Big_buck_bunny_poster_big.jpg" preload="metadata">
                     <source src="https://www.w3schools.com/tags/movie.mp4" type="video/mp4">
                     El navegador no puede interpretar el video
                 </video>
