--- a/Home.html
+++ b/Home.html
@@ -38,7 +38,7 @@
         <div class="cursos">
             <div class="titprod"> Los mejores cursos de Cesur </div>
             <div class="containertext">
-                <img class="imageprod" src="daw.jpg">
+                <img class="imageprod" src="dawreducida.jpg">
                 <div class="inside">
                     <div class="price">3.000€</div>
                     <div class="textprod">Solicitar</div>
@@ -52,25 +52,25 @@
                 </div>
             </div>
             <div class="containertext">
-                <img class="imageprod" src="dj.jpg">
+                <img class="imageprod4" src="djreducida.jpg">
                 <div class="inside">
                     <div class="price">3.000€</div>
                     <div class="textprod">Solicitar</div>
                 </div>
             </div>
     </div>
-
+    
     <div class="productosNuevos">
         <div class="nuevos">
             <div class="titNuevos">Nuevos Cursos</div>
             <div class="containertext">
                 <video width="80%" height="250" controls poster="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c5/Big_buck_bunny_poster_big.jpg/424px-Big_buck_bunny_poster_big.jpg" preload="metadata">
-                    <source src="https://www.w3schools.com/tags/movie.mp4" type="video/mp4">
+                    <source src="https://www.youtube.com/embed/WbsI4OMwh-w?list=RDWbsI4OMwh-w" type="ideo/mp4">
                     El navegador no puede interpretar el video
                 </video>
             </div>
             <div class="containertext">
-                <img class="imageprod2" src="cocina.jpg">
+                <img class="imageprod2" src="cocinareducida.jpg">
             </div>
             </div>
             <div class="containertext">
