--- a/Home.html
+++ b/Home.html
@@ -38,14 +38,14 @@
         <div class="cursos">
             <div class="titprod"> Los mejores cursos de Cesur </div>
             <div class="containertext">
-                <img class="imageprod" src="dawreducida.jpg">
+                <img class="imageprod3" src="dawreducida.jpg">
                 <div class="inside">
                     <div class="price">3.000€</div>
                     <div class="textprod">Solicitar</div>
                 </div>
             </div>
             <div class="containertext">
-                <img class="imageprod" src="dam.jpg">
+                <img class="imageprod" src="damreducida.jpg">
                 <div class="inside">
                     <div class="price">3.000€</div>
                     <div class="textprod">Solicitar</div>
@@ -64,8 +64,8 @@
         <div class="nuevos">
             <div class="titNuevos">Nuevos Cursos</div>
             <div class="containertext">
-                <video width="80%" height="250" controls poster="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c5/Big_buck_bunny_poster_big.jpg/424px-Big_buck_bunny_poster_big.jpg" preload="metadata">
-                    <source src="https://www.youtube.com/embed/WbsI4OMwh-w?list=RDWbsI4OMwh-w" type="ideo/mp4">
+                <video width="80%" height="250" controls poster="video.jpg" preload="metadata">
+                    <source src="video2.mp4" type="video2/mp4">
                     El navegador no puede interpretar el video
                 </video>
             </div>
@@ -81,9 +81,10 @@
             </div>
         </div>
     </div>
-
+    
 </section>
 
+<dialog open>Esto es un dialogo</dialog>
 
 <footer>
     
